--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-Basecoat is designed to cover the basics: MVC, Front Controller, templating, and database abstraction. It does not enforce a coding style, naming convention, or have require many dependencies. Thus it is well suited for migrating a current site to a more manageable architecture. 
-Since there aren't many dependencies, you can run "old code" under the framework so you don't have to run the risk of a massive single release upgrade. But it is also well suited to building sites from scratch and has been used to build Facebook applications with a combined installed base of over 1.5 million.
-With less than 25 files in it's base form, it is a very approachable framework that is easy to learn. You should be able start creating page within the first hour or two.
+Basecoat is designed to cover the basics: MVC, Front Controller, Templating, and Database abstraction. It is designed to be "included" in your code and using it as a full framework is optional. This allows one to build parts of a website in the framework and migrate over time. It does not enforce a coding style, naming convention, or have many dependencies. Basecoat is designed to be a centralized core code base that websites are built on. The same core code base can be loaded by many different web sites and/or applications. The configurations that dictate the framework's behavior are part of the website code, not the framework. Pulling in updates won't overwrite any of your own code. 
 
-The examples directory contains documentation, which was written using the framework so it acts as both documentation and an example of how to work with the framework. To load the framework, just put the directory in a web accessible area and point your browser at the www directory.
+The entire framework is less than 10 files, so it is very easy to learn and start using. You should be able start creating web pages within a few hours (possibly 1 hour) of downloading the framework. Performance is quite good, handling hundreds of pages per second, even without accelerators like APC. It requires no special setup or configuration, not even mod_rewrite. It can be configured to use parameter based URLs or if you want "pretty urls", mod_rewrite or something similar.
+
+To get started, simply download the framework, including the examples. Place the whole framework in a web accessible directory and point your browser at basecoat/examples/docs/www/. The documentation is written using the framework, so you can view the code and see how it is working while you read through the documentation. Typically you would only have the www web accessible, but that is up to you.
+
