--- a/README
+++ b/README
@@ -2,5 +2,6 @@ Basecoat is designed to cover the basics: MVC, Front Controller, Templating, and
 
 The entire framework is less than 10 files, so it is very easy to learn and start using. You should be able start creating web pages within a few hours (possibly 1 hour) of downloading the framework. Performance is quite good, handling hundreds of pages per second, even without accelerators like APC. It requires no special setup or configuration, not even mod_rewrite. It can be configured to use parameter based URLs or if you want "pretty urls", mod_rewrite or something similar.
 
-To get started, simply download the framework, including the examples. Place the whole framework in a web accessible directory and point your browser at basecoat/examples/docs/www/. The documentation is written using the framework, so you can view the code and see how it is working while you read through the documentation. Typically you would only have the www web accessible, but that is up to you.
+To get started, simply download the framework, including the examples. Place the whole framework in a web accessible directory and point your browser at basecoat/examples/docs/www/. The documentation is written using the framework, so you can view the code and see how it is working while you read through the documentation. Typically you would only have the www directory web accessible, but that is up to you.
 
+There is also a quickstart directory in the example directory that can be used as a template for creating new websites. Simply make a copy of the quickstart directory and modify it to fit the needs to your new website. Modify the index.php file in the www directory to load the framework init from the appropriate path.
